# HermesNet

./: .gitignore  LICENSE  README.md  client.py  directories.py  pyproject.toml  requirements.txt  server.py  server_protocol.py  test.py  whattodo.md
hermesnet/client/: __init__.py  __main__.py  client_term.py  network.py
hermesnet/protocol/: __init__.py  filesystem.py  messages.py  network.py
hermesnet/server/: __init__.py  __main__.py  network.py  processor.py
src/hermesnet/: __init__.py  common.py
src/hermesnet/client/: client_term.py  network.py
src/hermesnet/protocol/: __init__.py  filesystem.py  messages.py  network.py  tcp_network.py
src/hermesnet/server/: network.py  processor.py
tests/: test_file.py  test_filesystem.py  test_messages.py  test_network.py  test_protocol.py
