[project]
name = "hermesnet"
version = "0.2.0"
authors = [{ name = "Cutipus", email = "cutipus@proton.me" }]
maintainers = [{ name = "Cutipus", email = "cutipus@proton.me" }]
description = "A distributed file sharing application inspired by SoulSeek and Torrent written in Python."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["network", "distributed", "file sharing"]
dependencies = ["pytest", "pytest-cov", "aiofiles"]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/Cutipus/HermesNet"
#Documentation = ""
Repository = "https://github.com/Cutipus/HermesNet.git"
Issues = "https://github.com/Cutipus/HermesNet/issues"
#Changelog = "https://github.com/Cutipus/HermesNet/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
